--- a/DriverTrackerApp/.github/workflows/android-ci.yml
+++ b/DriverTrackerApp/.github/workflows/android-ci.yml
@@ -14,5 +14,13 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
+      with:
+        java-version: 17
+        distribution: temurin
     - name: Build APK
       run: ./gradlew assembleDebug
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
