--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,12 +1,3 @@
-name: Android CI - Build APK
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +8,8 @@ jobs:
       with:
         java-version: 17
         distribution: temurin
+    - name: Make gradlew executable
+      run: chmod +x gradlew
     - name: Build APK
       run: ./gradlew assembleDebug
     - name: Upload APK
